[package]
name = "deezer_downloader"
version = "0.1.0"
edition = "2021"
authors = ["zggff<gigamaximwachau@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zggff/deezer_downloader"
readme = "README.md"
keywords = ["deezer", "downloader"]
description = "crate to download music from deezer"

[dependencies]
reqwest = {version = "0.11.7", features = ["json", "cookies"]}
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
md5 = "0.7.0"
byteorder = "1.4.3"
hex = "0.4.3"
hex-literal = "0.3.4"
block-modes = "0.8.1"
blowfish = "0.8.0"
id3 = "0.6.6"
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0.30", features = ["derive"] }
futures = "0.3.25"
indicatif = "0.17.7"
